[package]
name = "choose"
version = "0.2.2"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
squirrel-rng = "0.2.2"
